Fix text wrapping on Chromium
Bug: T327511

--- a/style.less
+++ b/style.less
@@ -473,6 +473,10 @@ a.disabled {
 	margin-bottom: 2.5em;
 }
 
+a.item-link {
+	overflow-wrap: anywhere;
+}
+
 .CodeMirror {
 	border-left: 1px solid @border-color-heading;
 	border: 0;
